loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:8: error: not found: value levebrosse
  levebrosse()
  ^