loopfor.LoopStairs.scala.code
avance();
baisseBrosse()
avance();avance();
for(x<-1 to 8)
{
  gauche()
  avance()
  levebrosse()
  avance()
  baisseBrosse()
}